Fix table width using vw instead of %
CL
fix: Tables don't resize wildly when the page gets too wide
/CL

--- a/style/pages/critters.scss
+++ b/style/pages/critters.scss
@@ -7,6 +7,6 @@ div[data-tab="Critters"] {
     padding-top: 22px;
   }
   .critter-ext td:nth-child(2) {
-    width: 55vw;
+    width: 55%;
   }
 }
