--- a/style/pages/food.scss
+++ b/style/pages/food.scss
@@ -34,7 +34,7 @@ div[data-tab="Guide_to_drinks"] {
   .junk-ext,
   .recipe-ext {
     td:nth-child(2) {
-      width: 30vw;
+      width: 30%;
       max-width: 300px;
       text-align: center;
     }
@@ -61,7 +61,7 @@ div[data-tab="Guide_to_drinks"] {
 
   .food-base-ext {
     td:nth-child(1) {
-      width: 30vw;
+      width: 30%;
       max-width: 300px;
       text-align: center;
     }
