--- a/style/pages/mafia.scss
+++ b/style/pages/mafia.scss
@@ -3,6 +3,6 @@ div[data-tab="Mafia"] {
     text-align: center;
   }
   .role-ext td:nth-child(2) {
-    width: 60vw;
+    width: 60%;
   }
 }
