--- a/style/pages/virology.scss
+++ b/style/pages/virology.scss
@@ -26,7 +26,7 @@ div[data-tab="Infections"] {
       line-height: 1.5em;
     }
     td:nth-child(2) {
-      width: 30vw;
+      width: 30%;
       max-width: 300px;
       text-align: center;
     }
